--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ li{
   left: 50%;
   transform: translateX(-50%);
   margin: 60px 0px;
-  padding: 0px 10px;
+  padding: 10px;
 }
 #show-result{
   position: absolute;
@@ -135,12 +135,15 @@ li{
   overflow: hidden;
   -webkit-transition: height 1s; /* Safari */
   transition: height 1s;
-  z-index: 10;
 }
 .content{
   display: inline-block;
   width: 300px;
   margin: 15px 5px;
+}
+.content:hover{
+  background-color: #EEEEEE;
+  border-radius: 20px;
 }
 .firstLine{
   display: block;
